--- a/src/assets/sass/config.sass
+++ b/src/assets/sass/config.sass
@@ -5,6 +5,7 @@
 $family-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 
 $verde-limao: #b0d353
+$primary: #98bb3b
 
 
 // Override generated variables here
@@ -22,10 +23,10 @@ html
   // height: 100%
   // margin: 0px
   // padding: 0px
-
 *
   -webkit-font-smoothing: antialiased
-
 h1
   text-transform: uppercase
   font-family: 'Roboto'
+.align-items-center
+  align-items: center
