--- a/src/assets/sass/config.sass
+++ b/src/assets/sass/config.sass
@@ -6,6 +6,7 @@ $family-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen"
 
 $verde-limao: #b0d353
 $primary: #98bb3b
+$warning: #ecc22d
 
 
 // Override generated variables here
@@ -28,5 +29,16 @@ html
 h1
   text-transform: uppercase
   font-family: 'Roboto'
+
 .align-items-center
   align-items: center
+.container-responsive
+  +mobile
+    margin-left: 1rem
+    margin-right: 1rem
+  margin-left: auto
+  margin-right: auto
+  justify-content: space-around
+.columns
+  &:not(:last-child)
+    margin-bottom: 1.75rem
