--- a/src/assets/sass/config.sass
+++ b/src/assets/sass/config.sass
@@ -32,6 +32,10 @@ h1
 
 .align-items-center
   align-items: center
+.justify-content-center
+  justify-content: center
+  display: flex
+  flex-direction: column
 .container-responsive
   +mobile
     margin-left: 1rem
