--- a/src/assets/sass/config.sass
+++ b/src/assets/sass/config.sass
@@ -12,7 +12,7 @@ $warning: #ecc22d
 // Override generated variables here
 $family-primary: $family-serif
 
-@import "node_modules/bulma/bulma.sass"
+@import "~bulma/bulma.sass"
 
 html
   width: 100%
