news contet fb and sharing

--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -37,3 +37,18 @@ h1
 .news-content
   p
     margin-bottom: 1rem
+
+.social-share
+  display: flex
+  flex-direction: row
+  width: 100%
+  justify-content: space-between
+  .icons-section
+    display: flex
+    flex-direction: row
+    width: 100%
+    &.flex-end
+      justify-content: flex-end
+    .image
+      cursor: pointer
+      margin: 0 0.3rem
