Modularized some colours and added a new section on home: A sticky new

--- a/src/assets/sass/config.sass
+++ b/src/assets/sass/config.sass
@@ -5,6 +5,7 @@ $family-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen"
 $verde-limao: #b0d353
 $primary: #98bb3b
 $warning: #ecc22d
+$darken-blue: #1b6c96
 
 // Values
 $family-primary: $family-serif
