Banner para o Jamboree

--- a/src/assets/sass/config.sass
+++ b/src/assets/sass/config.sass
@@ -6,6 +6,7 @@ $verde-limao: #b0d353
 $primary: #98bb3b
 $warning: #ecc22d
 $darken-blue: #1b6c96
+$orange: #DE876C
 
 // Values
 $family-primary: $family-serif
