Hotsite do seminario de comunicacao

--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -52,3 +52,12 @@ h1
     .image
       cursor: pointer
       margin: 0 0.3rem
+
+.image
+  &.is-rounded
+    img
+      object-fit: cover
+      object-position: center center
+      height: 100%
+      width: 100%
+      border-radius: 250983px
