Iniciando alterações de nova identidade

--- a/src/assets/sass/common.sass
+++ b/src/assets/sass/common.sass
@@ -1,17 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700')
+@import '~bulma/sass/utilities/_all'
 
 // Vars
 $family-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $verde-limao: #b0d353
-$primary: #98bb3b
+$primary: #841224
+$secondary: #f7941e
 $warning: #ecc22d
 $darken-blue: #1b6c96
 $orange: #DE876C
+$light-gray: #ccccb9
 
 // Values
 $family-primary: $family-serif
-
-@import "~bulma/bulma.sass"
-
-@import "./fonts.sass"
-@import "./global.sass"
