--- a/src/assets/sass/fonts.sass
+++ b/src/assets/sass/fonts.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700')
+
 @font-face
   font-family: 'April Fools Day'
   src: url('~assets/fonts/AprilFoolsDay.eot')
