--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -1,3 +1,7 @@
+@import 'common'
+@import '~bulma/bulma.sass'
+@import 'fonts'
+
 html
   width: 100%
   overflow-x: hidden
@@ -8,6 +12,7 @@ html
   body
     overflow: hidden
     width: 100%
+    background: url(~assets/images/bg.png)
   // height: 100%
   // margin: 0px
   // padding: 0px
