Progresso na atualizacao do layout

--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -66,3 +66,12 @@ h1
       height: 100%
       width: 100%
       border-radius: 250983px
+
+
+.menu-list
+  a
+    &:hover
+      color: $primary
+    &.is-active
+      background-color: $primary
+      color: $primary-invert
