--- a/src/assets/sass/common.sass
+++ b/src/assets/sass/common.sass
@@ -4,11 +4,20 @@
 $family-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $verde-limao: #b0d353
 $primary: #841224
+$primary-invert: findColorInvert($primary)
+
 $secondary: #f7941e
+$secondary-invert: findColorInvert($secondary)
+
+$orange: #ef5023
+$orange-invert: findColorInvert($orange)
+
 $warning: #ecc22d
 $darken-blue: #1b6c96
-$orange: #DE876C
 $light-gray: #ccccb9
+$link: $primary
+
+$colors: ("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert), "secondary": ($secondary, $secondary-invert), "info": ($info, $info-invert), "success": ($success, $success-invert), "warning": ($warning, $warning-invert), "danger": ($danger, $danger-invert), "orange": ($orange, $orange-invert))
 
 // Values
 $family-primary: $family-serif
