--- a/src/assets/sass/global.sass
+++ b/src/assets/sass/global.sass
@@ -20,6 +20,8 @@ html
   -webkit-font-smoothing: antialiased
 h1
   text-transform: uppercase
+
+h1, h2, h3, h4, h5, h6
   font-family: 'Roboto'
 
 .align-items-center
@@ -75,3 +77,8 @@ h1
     &.is-active
       background-color: $primary
       color: $primary-invert
+
+.is-family-secondary
+  font-family: $family-secondary !important
+.is-family-alternative
+  font-family: $family-alternative !important
