--- a/src/assets/sass/fonts.sass
+++ b/src/assets/sass/fonts.sass
@@ -7,7 +7,6 @@
   font-weight: normal
   font-style: normal
 
-
 @font-face
   font-family: 'AprilFoolsDay'
   src: url('~assets/fonts/AprilFoolsDay.woff') format("woff"), url('~assets/fonts/AprilFoolsDay.ttf') format("truetype"), url('~assets/fonts/AprilFoolsDay.svg#AprilFoolsDay') format("svg")
@@ -20,7 +19,6 @@
   src: url('~assets/fonts/MoonFlower.eot?#iefix') format("embedded-opentype")
   font-weight: normal
   font-style: normal
-
 
 @font-face
   font-family: 'MoonFlower'
@@ -35,9 +33,20 @@
   font-weight: normal
   font-style: normal
 
-
 @font-face
   font-family: 'MoonFlowerBold'
   src: url('~assets/fonts/MoonFlowerBold.woff') format("woff"), url('~assets/fonts/MoonFlowerBold.ttf') format("truetype"), url('~assets/fonts/MoonFlowerBold.svg#MoonFlowerBold') format("svg")
   font-weight: normal
   font-style: normal
+
+@font-face
+  -webkit-font-smoothing: antialiased
+  font-family: 'Capsuula'
+  src: url('~assets/fonts/capsuula.woff') format("woff"), url('~assets/fonts/capsuula.ttf') format("truetype")
+  font-weight: normal
+  font-style: normal
+
+
+@font-face
+   font-family: 'Almost Cartoon'
+   src: url('../fonts/cartoon.ttf') format('truetype')
